--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,20 @@
     <groupId>epul</groupId>
     <artifactId>JPAClient</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <dependencies>
-
+        <dependency>
+            <groupId>epul</groupId>
+            <artifactId>JPAApplication</artifactId>
+        </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>epul</groupId>
+                <artifactId>JPAApplication</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
